cmake_minimum_required(VERSION 3.16.0)

include(${CMAKE_CURRENT_LIST_DIR}/cmake/colorized_messages.cmake)
include(${CMAKE_CURRENT_LIST_DIR}/cmake/clang-format.cmake)
# include(${CMAKE_CURRENT_LIST_DIR}/cmake/FindMathJax.cmake)

# Check if CGT7X_ROOT env variable is set message("CGT7X_ROOT:$ENV{CGT7X_ROOT}")
if(NOT DEFINED ENV{CGT7X_ROOT})
  message(
    FATAL_ERROR
      "${BoldRed} CGT7X_ROOT env variable is not set, CMake will exit.")
endif()

# Check if PSDK_RTOS_ROOT env variable is set
# message("CGT7X_ROOT:$ENV{CGT7X_ROOT}")
if(SOC STREQUAL "j722s")
  if(NOT DEFINED ENV{PSDK_RTOS_ROOT})
    message(
      FATAL_ERROR
        "${BoldRed} PSDK_RTOS_ROOT env variable is not set, CMake will exit.")
  endif()
endif()

# Check if PDK_ROOT env variable is set message("CGT7X_ROOT:$ENV{CGT7X_ROOT}")
if(NOT DEFINED ENV{MCU_PLUS_SDK_ROOT})
  message(
    FATAL_ERROR
      "${BoldRed} MCU_PLUS_SDK_ROOT env variable is not set, CMake will exit.")
else()
  # set the udma directory
  set(C7X_DMAUTILS_ROOT "$ENV{MCU_PLUS_SDK_ROOT}/source/drivers/dmautils")

  set(DMA_UTILS_INCLUDE_DIR ${C7X_DMAUTILS_ROOT}/include
                            "$ENV{MCU_PLUS_SDK_ROOT}/source/")

endif()

if(SOC STREQUAL "j722s")
  set(FFTLIB_ROOT "$ENV{PSDK_RTOS_ROOT}/fftlib")
  set(DSPLIB_ROOT "$ENV{PSDK_RTOS_ROOT}/dsplib")
else()
  set(FFTLIB_ROOT "$ENV{MCU_PLUS_SDK_ROOT}/source/fftlib")
  set(DSPLIB_ROOT "$ENV{MCU_PLUS_SDK_ROOT}/source/dsplib")
endif()

if(TARGET_PLATFORM STREQUAL "PC")
  set(FFTLIB_LIBS "${FFTLIB_ROOT}/lib/Release/FFTLIB_common_${DEVICE}_x86_64.a"
                  "${FFTLIB_ROOT}/lib/Release/FFTLIB_${DEVICE}_x86_64.a")
  set(FFTLIB_INCLUDES "${FFTLIB_ROOT}/src/")
else()
  set(FFTLIB_LIBS "${FFTLIB_ROOT}/lib/Release/FFTLIB_common_${DEVICE}.lib"
                  "${FFTLIB_ROOT}/lib/Release/FFTLIB_${DEVICE}.lib")
  set(FFTLIB_INCLUDES "${FFTLIB_ROOT}/src/")
endif()

if(TARGET_PLATFORM STREQUAL "PC")
  set(DSPLIB_LIBS "${DSPLIB_ROOT}/lib/Release/DSPLIB_common_${DEVICE}_x86_64.a"
                  "${DSPLIB_ROOT}/lib/Release/DSPLIB_${DEVICE}_x86_64.a")
  set(DSPLIB_INCLUDES "${DSPLIB_ROOT}/src/")
else()
  set(DSPLIB_LIBS "${DSPLIB_ROOT}/lib/Release/DSPLIB_common_${DEVICE}.lib"
                  "${DSPLIB_ROOT}/lib/Release/DSPLIB_${DEVICE}.lib")
  set(DSPLIB_INCLUDES "${DSPLIB_ROOT}/src/")
endif()

# Set release as default build type
if(NOT EXISTS ${CMAKE_BINARY_DIR}/CMakeCache.txt)
  if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE
        "Release"
        CACHE STRING "" FORCE)
  endif()
endif()

# CMake custom util functions
include(${CMAKE_CURRENT_LIST_DIR}/cmake/utils.cmake)
tisp_print_build_details()

if(TARGET_PLATFORM STREQUAL "PC")
  set(CMAKE_EXPORT_COMPILE_COMMANDS
      ON
      CACHE INTERNAL "")

endif()

set(CMAKE_CXX_STANDARD 14)

if(DEVICE STREQUAL "C7524")
  set(CGT_POSTFIX "-MMA2_256")
endif()

# ##############################################################################
# Pick the correct tool chain file of HE vs C7x ##
# ##############################################################################

if(TARGET_PLATFORM STREQUAL "PC")

  set(C7X_INCLUDES
      ${FFTLIB_INCLUDES} ${DSPLIB_INCLUDES}
      "$ENV{CGT7X_ROOT}/host_emulation/include/${DEVICE}${CGT_POSTFIX}")
  # set(C7X_INCLUDES "$ENV{CGT7X_ROOT}/host_emulation/include/${DEVICE}")

  if(SOC STREQUAL AM62A)
    set(C7X_DMA_LIBS
        ${C7X_DMAUTILS_ROOT}/lib/dmautils.am62ax.c75x.ti-c7x-hostemu.release.lib
    )
  endif()

  if(SOC STREQUAL AM62D)
    set(C7X_DMA_LIBS
        ${C7X_DMAUTILS_ROOT}/lib/dmautils.am62dx.c75x.ti-c7x-hostemu.release.lib
    )
  endif()

  if(SOC STREQUAL j722s)
    set(C7X_DMA_LIBS
        ${CMAKE_SOURCE_DIR}/ext_libs/dmautils.j722s.c75ssx-0.ti-c7x-hostemu.release.lib
    )
  endif()

  message("c7x dma libs libs : ${C7X_DMA_LIBS}")

  if(CMAKE_HOST_WIN32)
    set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_LIST_DIR}/cmake/msvc.cmake")
    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded")

    # Place all bins static libs in known place
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib/")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
  else()
    set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_LIST_DIR}/cmake/gcc.cmake")
    # Place all bins static libs in known place
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY
        "${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY
        "${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}")
  endif()

else()

  # Place all bins static libs in known place
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY
      "${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE}")
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY
      "${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}")

  set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_LIST_DIR}/cmake/c7x.cmake")
  set(C7X_INCLUDES "$ENV{CGT7X_ROOT}/include")

  list(APPEND C7X_INCLUDES "${FFTLIB_INCLUDES}")
  list(APPEND C7X_INCLUDES "${DSPLIB_INCLUDES}")

  if(SOC STREQUAL AM62A)
    set(C7X_DMA_LIBS
        ${C7X_DMAUTILS_ROOT}/lib/dmautils.am62ax.c75x.ti-c7000.release.lib)
  endif()

  if(SOC STREQUAL AM62D)
    set(C7X_DMA_LIBS
        ${C7X_DMAUTILS_ROOT}/lib/dmautils.am62dx.c75x.ti-c7000.release.lib)
  endif()

  if(SOC STREQUAL j722s)
    set(C7X_DMA_LIBS
        ${C7X_DMAUTILS_ROOT}/lib/dmautils.j722s.c75ss0-0.ti-c7000.release.lib)
  endif()

  # message("C7X_INCLUDES: ${C7X_INCLUDES}")
  include_directories(BEFORE SYSTEM $ENV{CGT7X_ROOT}/include)

  # string(REGEX REPLACE "^C" "" siliconVersion ${DEVICE}) set(C7x_LIBS
  # "$ENV{CGT7X_ROOT}/lib/rts${siliconVersion}_le.lib")

endif()

# Set compilation flags for release and debug based on TARGET_PLATFORM
tisp_compile_options()
tisp_include_xlib_headers()

project(TISP)

# Place all bins static libs in known place
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY
    "${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY
    "${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}")

set(CMAKE_EXPORT_COMPILE_COMMANDS
    ON
    CACHE INTERNAL "") # works
# ##############################################################################
# Create dependency based on testing a kernel or running the example for a given
# kernel #
# ##############################################################################

if(BUILD_TEST)

  add_subdirectory(test)

elseif(AUTO_TEST)

  set(BUILD_LIB 1)
  add_subdirectory(test)

elseif(BUILD_EXAMPLE)

  set(BUILD_LIB 1)
  add_subdirectory(examples)

  # if (TARGET_PLATFORM STREQUAL "DSP") # set(CMAKE_EXE_LINKER_FLAGS
  # "--library=${CMAKE_CURRENT_LIST_DIR}/build/bin/libTISP.a
  # ${CMAKE_EXE_LINKER_FLAGS}") # message("This is the updated
  # CMAKE_EXE_LINKER_FLAGS:${CMAKE_EXE_LINKER_FLAGS}") endif()

endif()

# Rules for building src directory
add_subdirectory(src bin)
